Don't use hardcoded colors, this messes up KDE styling.

Volodya: If you think you really need 2 colors in the listview, lets discuss
this on the list and see what color role may fit the purpose.

BUG: 81278
CCMAIL: kdevelop-devel@kdevelop.org